# statistical-pairs-trading

./: .gitignore  DATA.md  MODEL_CARD.md  Makefile  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
data/: AAPL_MSFT_2015_2023.csv  KO_PEP_2015_2023.csv  XOM_CVX_2015_2023.csv
reports/: SOURCE_RUN.txt
reports/latest/: config.yaml  data_manifest.json  environment.json  metrics.json  predictions.parquet  statistical_tests.json
src/pairsresearch/: artifacts.py  core.py  run.py
tests/: test_core.py
